Closed Bug 246173 Opened 22 years ago Closed 21 years ago

Install failed: Couldn't open xpistub library

Categories

(Firefox :: Installer, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: jnp, Assigned: bugs)

References

Details

(Keywords: fixed-aviary1.0)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en) AppleWebKit/125.2 (KHTML, like Gecko) Safari/125.8 Build Identifier: Trying to install firefox-0.9rc on my SuSE linux I get the error: "Fatal error (-618): Couldn't open xpistub library" I have seen the error on recently installers but not previously investigated further. The latest version I have installed is: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040207 Firefox/0.8 Reproducible: Always Steps to Reproduce: 1. 2. 3. I have a similar on Linux version 2.4.21-215-default (root@i386.suse.de) (gcc version 3.2.2) #1 Tue Apr 27 14:55:35 UTC 2004 SuSE Linux 8.1 (i386) VERSION = 8.1
Same problem here. The progress bar gets about 80% and then the installation fails with "Fatal error [-618]: Couldn't open xpistub library" This is Slackware 9.0. Running the installer as root or a normal user makes no difference. Linux mongoose 2.4.20 #2 Mon Mar 17 22:02:15 PST 2003 i686 unknown
Same problem on Redhar 8.0 Linux fufel.dash.ca 2.4.20-20.8 #1 Mon Aug 18 15:11:31 EDT 2003 i686 i686 i386 GNU/Linux
Same here. I'm running Slackware 9.1 with all -current packages installed. I get the error as soon as I click "Install" on the final confirmation dialog.
Running RH8, attempted to install to /usr/local/firefox0.9 from /usr/local/firefox-installer, I also encountered this bug. Also fails when trying to install to /usr/local/firefox-installer. Happens in both custom and standard install modes.
Tried setting my LD_LIBRARY_PATH (as root) to moz1.6 dir whch has libxpistub.so in it. Did *not* work. (Rather naive attempt at a solution perhaps, but easy to try).
This may be related to bugs <a href="http://bugzilla.mozilla.org/show_bug.cgi?id=143620">143620</a> href="http://bugzilla.mozilla.org/show_bug.cgi?id=180810">180810</a> in the Moz browser installer.
Same problem here with Mandrake 9.0. mason_mullins@hotmail.com. I have the mozilla development libraries installed so was suprised when I saw this.
Same problem with RedHat 7.3 Originally complained about libstdc++.so.5 missing. Fixed this by editing /etc/ld.so.conf and adding /usr/local/gcc3/lib and running ldconfig (GCC 3.3.4 built from source) everything else pretty much standard.
I found this bug exist in firefox 0.9.0/0.9.1/0.9.3 in Sun Java Desktop 1, but I can install 0.9.3 with on problem in Hiweed-Debian(www.hiweed.com, an linux distribution based on Debian) which have installed firefox 0.9.1 default in this distribution.
Here's a link to the error box.http://btbair.com/error.jpg i recieve each time I try to install 0.9.3 in RedHat Linux 8.0 as a user or as root. Text of error is Fatal error [-618] Couldn't open xpistub library.
I have this exact problem too, trying to install: firefox-0.9.3-i686-linux-gtk2+xft-installer.tar.gz on: Linux caesar 2.4.19-4GB-athlon #1 Fri Apr 2 20:09:36 UTC 2004 i686 unknown (Sun Java Desktop System release 2 ... which I believe is based on SuSE 8.1) I discovered that the xpi files can be unzipped with 'unzip' so I did(!) and tried to run the binary, with the following errors: mel@caesar:~> firefox /usr/local/firefox/bin/firefox-bin: /lib/i686/libc.so.6: version `GLIBC_2.3' not found (required by /usr/local/firefox/bin/firefox-bin) /usr/local/firefox/bin/firefox-bin: /lib/i686/libc.so.6: version `GLIBC_2.3' not found (required by /usr/local/firefox/bin/libmozjs.so) /usr/local/firefox/bin/firefox-bin: /lib/i686/libc.so.6: version `GLIBC_2.3' not found (required by /usr/local/firefox/bin/libxpcom.so) /usr/local/firefox/bin/firefox-bin: /lib/i686/libpthread.so.0: version `GLIBC_2.3.2' not found (required by /usr/local/firefox/bin/libnspr4.so) /usr/local/firefox/bin/firefox-bin: /lib/i686/libc.so.6: version `GLIBC_2.3' not found (required by /usr/local/firefox/bin/libnspr4.so) /usr/local/firefox/bin/firefox-bin: /lib/i686/libc.so.6: version `GLIBC_2.3' not found (required by /usr/local/firefox/bin/libnss3.so) /usr/local/firefox/bin/firefox-bin: /lib/i686/libc.so.6: version `GLIBC_2.3' not found (required by /usr/local/firefox/bin/libsoftokn3.so) /usr/local/firefox/bin/firefox-bin: /lib/i686/libc.so.6: version `GLIBC_2.3' not found (required by /usr/local/firefox/bin/libxpcom_compat.so) So .. I guess the binary was built with an incompatable libc or something ?
(In reply to comment #6) > This may be related to bugs <a > href="http://bugzilla.mozilla.org/show_bug.cgi?id=143620">143620</a> > href="http://bugzilla.mozilla.org/show_bug.cgi?id=180810">180810</a> in the Moz > browser installer. that bottom link,180810,sure seems to be the same problem. It is listed as resolved and fixed. I haven't tried the solution yet I'm not familiar enough with linux to know how.
Same problem here, this was attemped on Redhat 8.0
Same problem in JDS r1...
A help to who needs: to bypass this bug there is availablle a firefox pack without installer: ftp://ftp.mozilla.org/pub/mozilla.org/firefox/releases/0.9rc/firefox-0.9rc-i686-linux-gtk2+xft.tar.gz It's just unpack and run. []'s
I use Mozilla, not firefox, but I experience this problem. If I use linux kernel 2.4.26 or 2.4.27 (vanilla), then mozilla installer (1.7.3) don't work. Cannot load xpistub library alternative workaround: If I use this kernel (~2.4.18 + many patch), then mozilla installer (1.7.3) work. http://startadsl.hu/oscon/linux/dists/stable/main/binary-i386/kernel-image-2.4.18-oscon_0.02_i386.deb I use Debian Woody (3.0r2), with glibc 2.2.5.
RedHat 8.0 + devel bog standard installation. Also 8.0 with gcc 3.4.0. Same problem occurs with Firefox 0.9. There is a libxpistub.so in /usr/lib - tried putting this in LD_LIBRARY_PATH (which is otherwise undefined) to no avail.
I get the same problem on RH Linux 8.0
*** Bug 261174 has been marked as a duplicate of this bug. ***
Brian, thats the thing we discussed yesterday on IRC. Could it be that installer already requires a certain version of glibc, but does not say so?
this is what seamonkey has now. It doesn't actually fix the problem, but at least informs the user what the problem is (which is almost certainly the glibc version). there's a better way to do this but I can't find installer.ini to patch in FF land.
Attachment #160076 - Flags: review?(bryner)
I filed bug 261567 for my "better" solution.
*** Bug 246997 has been marked as a duplicate of this bug. ***
I have the same problem trying to install Mozilla 7.3 (mozilla-i686-pc-linux-gnu-1.7.3-full-installer.tar. gz) on Fedora Core 1 (kernel-2.4.22-1.2199.nptl.i686.rpm).
At Andrew Schultz's suggestion I just tried a nightly build, the installer stops at 'Extracting libplc4.so. ..' and the Error! popup is the same as before, 'Fatal error [-618]: couldn't open xpistub library', but this time there is also an error in the shell where the install was run: DLError: /tmp/xpi.thqrG8/bin/libxpistub.so: failed to map segment from shared object: Operation not permitted Not that this means anything to me... but perhaps it does to someone :-)
One thing that is not usual with my system is that /tmp is mounted like this: LABEL=/tmp /tmp ext3 noexec,nosuid,rw,nouser,auto 1 2 By default it was: #LABEL=/tmp /tmp ext3 defaults 1 2 Perhaps there is an env var that I can set in order to use somewhere else for tmp files to see if this is the problem (the NVIDIA installer needs a different tmp dir setting to be run)?
> LABEL=/tmp /tmp ext3 noexec,nosuid,rw,nouser,auto 1 2 the noexec here is the problem. You'll need to set TMP or TEMP to some directory thar has exec privileges.
OK that did the trick :-) # mkdir ~/tmp # TMP=/root/tmp ./mozilla-installer
Mozilla installer + glibc 2.2.5 (debian woody 3.0r2) + more kernel versions: --- kernel-source-2.4.18 (debian woody 3.0r2) + glibc 2.2.5 + Mozilla Installer = WORK! kernel 2.4.18-oscon + glibc 2.2.5 + Mozilla installer = WORK! kernel 2.4.18-gekaichromage + glibc 2.2.5 +Mozilla installer = FAILED! (Couldn't open xpistub library) VANILLA linux-2.4.26 or linux 2.4.27 (from www.kernel.org) + glibc 2.2.5 + Mozilla installer = FAILED (Couldn't open xpistub library) --- I installed mozilla (from mozilla-installer and 2.4.18-oscon), but I use with 2.4.18-gekaichromage... --- kernel-source-2.4.18 from here: http://packages.debian.org/stable/devel/kernel-source-2.4.18 2.4.18-oscon kernel-image package from here: http://startadsl.hu/oscon/linux/dists/stable/main/binary-i386/kernel-image-2.4.18-oscon_0.02_i386.deb thss image contain kernel-source-2.4.18+grsecurity 1.9.4+i2c+lm-sensors+alsa 0.9+loop-AES. 2.4.18-gekaichromage from here: http://startadsl.hu/oscon/patchset.html this patchset contain kernel-source-2.4.18+grsec 2.0.1+i2c+lm-sensors+Crypto-API+FreeSWAN+O(1) scheduler from mingo+ea-acl patch 2.4.26 and 2.4.27 from here: ftp://kernel.org/pub/linux/kernel/v2.4 ---- I am sorry, but i can't speak english very well. Oscon
Oscon: please try a nightly build. It won't neccessarily work, but will give more info about the problem.
The exact same thing ("Fatal error (-618): Couldn't open xpistub library") happens with Firefox 1.0RC1, trying to install it on Slackware 9.0! I also see the "version `GLIBC_2.3' not found" (from libthreadp.so) error if I load libxpistub.so manually using LD_PRELOAD.
(In reply to comment #32) > I also see the "version `GLIBC_2.3' not found" (from libthreadp.so) error if I > load libxpistub.so manually using LD_PRELOAD. Apologies, that should be: GLIBC_2.3.2.
*** Bug 262930 has been marked as a duplicate of this bug. ***
I have the same problem on Debian 3.0, glibc 2.2.5. IMHO, the severity should be set to "blocker". Also, I don't know if the firefox installer was the cause, but after trying it, the machine crashed!
Vincent: this is not a blocker because it is not a bug in the code. You need glibc-2.3.2 to use .mozilla.org's firefox builds. You can build FF yourself or get the suite. This is in the release notes!!!!!
OK. It would be a good idea if the installer could test that and display an error message saying the glibc 2.3.2 is needed, instead of displaying just "Fatal error (-618): Couldn't open xpistub library". Also, there is no way to get a recent Mozilla/Firefox on this machine since compilation fails (bug 225457, this one marked as "blocker").
Attachment #160076 - Flags: review?(bryner) → review+
Attachment #160076 - Flags: approval-aviary?
Comment on attachment 160076 [details] [diff] [review] patch that already landed on seamonkey can't hurt. a=asa for aviary checkin.
Attachment #160076 - Flags: approval-aviary? → approval-aviary+
fixed on trunk and branch This didn't actually fix the error, just made it more descriptive -- look in the console. You're getting this error because of something about your system. It's not a bug in the installer.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 265813 has been marked as a duplicate of this bug. ***
Keywords: fixed-aviary1.0
*** Bug 265550 has been marked as a duplicate of this bug. ***
*** Bug 270577 has been marked as a duplicate of this bug. ***
*** Bug 270810 has been marked as a duplicate of this bug. ***
*** Bug 273168 has been marked as a duplicate of this bug. ***
*** Bug 276621 has been marked as a duplicate of this bug. ***
*** Bug 283760 has been marked as a duplicate of this bug. ***
I must be missing the point. How is this a glibc problem (at least in FF, maybe in the installer) when, once I make /libxpistub.so, the installer runs to completion. Then I can rm /libxpistub.so and FF still works fine. Also, the error message has not been fixed, I got this last night while upgrading to 1.0.1. And the errror is not misleading since fixing the lack of /libxpistub.so fixes the install. Also, I wa sgetting this when RH9 was less than 1 year old - who do you pick your glibc version, anyhow? Wouldn't it be nice to use one the many peole are compatiblle with?
*** Bug 252846 has been marked as a duplicate of this bug. ***
*** Bug 284623 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
QA Contact: bugzilla → installer
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: