Bug 246173 Install failed: Couldn't open xpistub library patch by ajschult@verizon.net r=bryner a=asa